--- a/class/cloudscale-loadbalancer-controller.yml
+++ b/class/cloudscale-loadbalancer-controller.yml
@@ -9,3 +9,28 @@ parameters:
           - ${_base_directory}/component/main.jsonnet
         input_type: jsonnet
         output_path: cloudscale-loadbalancer-controller/
+      # kustomize
+      - input_paths:
+          - ${_base_directory}/component/crd.jsonnet
+        input_type: jsonnet
+        output_path: ${_base_directory}/manifests/crd
+      - input_paths:
+          - ${_kustomize_wrapper}
+        input_type: external
+        output_path: .
+        env_vars:
+          INPUT_DIR: ${_base_directory}/manifests/crd
+        args:
+          - \${compiled_target_dir}/${_instance}/10_kustomize/crd
+      - input_paths:
+          - ${_base_directory}/component/cloudscale_loadbalancer_controller.jsonnet
+        input_type: jsonnet
+        output_path: ${_base_directory}/manifests/cloudscale_loadbalancer_controller
+      - input_paths:
+          - ${_kustomize_wrapper}
+        input_type: external
+        output_path: .
+        env_vars:
+          INPUT_DIR: ${_base_directory}/manifests/cloudscale_loadbalancer_controller
+        args:
+          - \${compiled_target_dir}/${_instance}/10_kustomize/cloudscale_loadbalancer_controller
