Fix `LoadBalancer` resource generation
Fix `LoadBalancer` resource generation to not drop all fields other than
`_pools`. The commit also refactors the generation logic to use
`com.generateResources()`.

--- a/tests/defaults.yml
+++ b/tests/defaults.yml
@@ -17,6 +17,8 @@ parameters:
     loadbalancers:
       api:
         spec:
+          floatingIPAddresses:
+            - cidr: 192.0.2.100/32
           _pools:
             http:
               frontend:
